--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: cd app/ && composer install --prefer-dist --no-progress
 
     - name: Validate app-console
-      run: bin/console
+      run: cd app/ && bin/console
 
