--- a/.github/workflows/app-console.yml
+++ b/.github/workflows/app-console.yml
@@ -1,4 +1,4 @@
-name: app-console
+name: Test app console
 
 on:
   push:
@@ -13,18 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+    - name: Validate composer.json
+      run: composer validate --strict
+
+    - name: Install dependencies
+      uses: php-actions/composer@v6
 
     - name: Install dependencies
       run: cd app/ && composer install --prefer-dist --no-progress
