--- a/.github/workflows/app-console.yml
+++ b/.github/workflows/app-console.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Validate composer.json
-      run: composer validate --strict
+      run: cd app/ && composer validate --strict
 
     - name: Install dependencies
       uses: php-actions/composer@v6
