--- a/.github/workflows/app-console.yml
+++ b/.github/workflows/app-console.yml
@@ -18,8 +18,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      uses: cd app/ && php-actions/composer@v6
+      
+      uses: php-actions/composer@v6 
+      working_dir: app/
 
     - name: Validate app-console
-      run: cd app/ && bin/console
+      run: bin/console
+      working-directory: app/
 
