rest: forbided default administrator edit/delete throught API

--- a/app/config/api/raw/demo.yml
+++ b/app/config/api/raw/demo.yml
@@ -3,5 +3,14 @@
 ########################################
 Demo\Domain\Model\Administrator\Administrator:
   attributes:
+    access_control: '"ROLE_ADMIN" in roles'
     order:
       username: ASC
+    write_access_control:
+      ROLE_ADMIN:
+        id:
+          neq: 1
+    delete_access_control:
+      ROLE_ADMIN:
+        id:
+          neq: 1
