--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -7,3 +7,12 @@ api_base_path:
 
 api_admin_login:
     path: admin_login
+
+post_send_administrator_activation_email:
+    path: '/administrators/{id}/send_activation_email'
+    methods: ['POST']
+    defaults:
+        _controller: App\Controller\Administrator\SendActivationEmail
+        _api_item_operation_name: 'send_activacion_email'
+        _api_receive: false
+
