core: handle administrators activation

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -43,6 +43,10 @@ security:
             pattern:  ^/token/refresh
             stateless: true
 
+        activate_admin:
+            pattern: ^/activate_admin/\d+$
+            security: false
+
         api:
             pattern:   ^/.+
             stateless: true
