schema: added Services entity

--- a/app/config/packages/orm_target_entities.yml
+++ b/app/config/packages/orm_target_entities.yml
@@ -9,3 +9,5 @@ doctrine:
         Ivoz\Core\Domain\Model\Changelog\Changelog
       Demo\Domain\Model\Timezone\TimezoneInterface:
         Demo\Domain\Model\Timezone\Timezone
+      Demo\Domain\Model\Service\ServiceInterface:
+        Demo\Domain\Model\Service\Service
