core: exposed Service entity in api

--- a/app/config/api/raw/demo.yml
+++ b/app/config/api/raw/demo.yml
@@ -37,3 +37,7 @@ Demo\Domain\Model\Administrator\Administrator:
       ROLE_ADMIN:
         id:
           neq: 1
+
+Demo\Domain\Model\Service\Service: ~
+
+
