--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -41,8 +41,10 @@ jobs:
         path: app/vendor
 
     - name: Install dependencies
-      uses: php-actions/composer@v6 
+      uses: php-actions/composer@v6
       with:
+        version: 2.5.5
+        php_version: 8.2.7
         working_dir: app/
 
     # Validate app console
