--- a/app/composer.json
+++ b/app/composer.json
@@ -21,7 +21,7 @@
         "doctrine/persistence": "^2.1",
         "gesdinet/jwt-refresh-token-bundle": "^0.12",
         "irontec/ivoz-api-bundle": "^4.7",
-        "irontec/ivoz-core": "^4.18",
+        "irontec/ivoz-core": "dev-CDD-17-mark-entitytools-methods-as-internal as 4.18",
         "irontec/ivoz-core-bundle": "^4.7.1",
         "irontec/ivoz-dev-tools": "^5.12.1",
         "symfony/asset": "^5.4",
